--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: #f7f8fc;">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/public/favicon.ico" />
@@ -11,10 +11,45 @@
     <meta name="apple-mobile-web-app-status-bar" content="#0a0e2b" />
     <meta name="theme-color" content="#0a0e2b" />
     <script type="module" src="/static/index.js"></script>
+    <link rel="stylesheet" href="https://esm.sh/@elastic/eui@93.2.0/dist/eui_theme_light.min.css" />
+    <link rel="stylesheet" href="/public/index.css" />
     <title>Siren Steps</title>
+    <style>
+      @keyframes rotate {
+        0% { transform: rotate(0) }
+        50% { transform: rotate(180deg) }
+        100% { transform: rotate(360deg) }
+      }
+      @keyframes fadeIn {
+        0% { opacity: 0; }
+        50% { opacity: 0; }
+        100% { opacity: 1; }
+      }
+
+      .spinner-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: calc(100vh - 20px);
+        animation: fadeIn 2s;
+      }
+
+      .spinner {
+        animation: 0.6s linear 0s infinite normal none running rotate;
+        border-radius: 50%;
+        border: 6px solid rgb(211, 218, 230);
+        border-block-color: rgb(0, 119, 204) rgb(211, 218, 230);
+        inline-size: 100px;
+        block-size: 100px;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="spinner-container">
+        <span class="spinner" role="progressbar" aria-label="Loading"></span>
+      </div>
+    </div>
   </body>
 </html>
